--- a/src/pages/Shop.scss
+++ b/src/pages/Shop.scss
@@ -1,8 +1,8 @@
 .shop-page {
-  min-height: 100vh;
+  height: 100vh;
   position: relative;
   color: #fff;
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 .game-bg {
