--- a/src/components/menu/MenuSession.scss
+++ b/src/components/menu/MenuSession.scss
@@ -131,7 +131,7 @@
 }
 
 .session-wallet-info {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 12px;
   padding: 1rem;
   display: flex;
@@ -198,7 +198,7 @@
 }
 
 .session-prompt {
-  text-align: center;
+  // text-align: center;
 
   p {
     margin: 0 0 1rem 0;
