--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -181,7 +181,7 @@
 
 .mobile-status-bar {
   text-align: center;
-  background: rgba(0, 0, 0, 0.3);
+  // background: rgba(0, 0, 0, 0.3);
   padding: 10px;
   border-radius: 12px;
   font-size: 0.8rem;
